# GameDiscountTracker

./: .gitignore  .replit  README.md  app.py  main.py  models.py  pyproject.toml
bot/: handlers.py  telegram_bot.py
data/: data_manager.py
services/: cache_service.py  config.py  currency_service.py  game_service.py  notification_service.py  price_tracker.py  scheduler.py
templates/: index.html  settings.html
