[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.13",
    "apscheduler>=3.11.0",
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "python-telegram-bot>=21.11.1",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.39",
    "redis>=5.2.1",
]
